# mlops-news-classifier

./: README.md  main.py  mlflow.db  pyproject.toml  structure_projet.txt  test.py
airflow/dags/: retrain_dag.py
api/: main.py
mlruns/1/71ab4bbb99a5445dbe5a98c17c229809/artifacts/: estimator.html
mlruns/1/models/m-5185418549c74401866326269045b0f9/artifacts/: MLmodel
mlruns/1/models/m-b9c24beb54794b48a7ef0488ec329de8/artifacts/: MLmodel  conda.yaml  requirements.txt
scripts/: build_csv.py  download_data.py  download_kaggle_data.py  kaggle_source.py  preprocess_data.py  sklearn_source.py  split_data.py  train_model.py
src/api/: main.py
src/data/: download.py  preprocess.py
src/data_processing/: convert.py
src/data_processing/preprocessing/: text_cleaner.py
src/data_sources/: base.py  kaggle_source.py  sklearn_source.py
src/mlflow/: tracking.py
src/model/: train.py
